kustomize/namespaces/main/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    run: nginx
  type: ClusterIP

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: default
spec:
  containers:
    - image: nginx
      name: nginx
      ports:
        - containerPort: 80
