kustomize/namespaces/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    version: 0.0.11

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /my-app
            backend:
              service:
                name: nginx
                port:
                  number: 80
